# LHCb-Analysis-Code

./: CMakeLists.txt  README.md
build_stuck/: .nfs00000007070c7d2c00000750
detail/: Selections.py.in
include/Event/: Event.h  LinkDef.h  TrackState.h  uComposite.h  uMCParticle.h  uMCVertex.h  uParticle.h  uPi0.h  uVertex.h
python/: BatchRun.py  BatchRunHadd.py  BinnedFitting.py  BsErrorCalc.py  BsReconstructor.py  BsReconstructorBatch.py  BsReconstructor_analysis.py  BsTestArea.py  BsToDsPi.py  BtoKpigamma.py  CompositeExample.py  KillCountChecker.py  MCTools.py  MCTruth.py  MergeTrees.py  NewTrackSelector.py  NewTrackSelectorBatch.py  PVResolution.py  PandE.py  ParticleLister.py  SneakPeak.py  TrackSelectionBatch.py  TrackSelectionOptimiser.py  UnbinnedFit.py  XisToLambdas.py
python/BatchOutputs/Test_06-11-24_13:27:36/: TestRun.py  Test_06-11-24_13:27:36.e  Test_06-11-24_13:27:36_Sub.sh  Test_06-11-24_13:27:36_condor.cndr
python/EuanSignal/: EuanSignal4D.csv  ROCPlotNew.py  SignalROCPlot.py  SignalSelectorBatch.py  XisToLambdasSignal.py
python/Examples/: BatchRunHadd.py  FileListTest.py  KsToPiPi.py  MCTools.py  ParticleLister.py
python/Fit/: 200Unfixed.py  Comparision.py  Comparison.py  CrystalBall.py  CrystalBallCC.py  CrystalBallExp.py  DComparison.py  HeatMap.py  ROCPlot.py  ROCPlot2.py  ROCPlotNew.py  Stack.py  UnbinnedFit.py  UnbinnedGauss.py  Variables.py  VariablesCC.py  VariablesGauss.py  VariablesSignal.py  WSPACE_19-59-28_19-01-2025_200PrelimRun  Workspace.py
python/Fit/CrystalBall/: CB.py  CBChevyChev.py  CBExp.py  CBGauss.py  ModelAndSignal.py  Overlay.py  Refit.py
python/Fit/CrystalBall/Overlay/: functions.py
python/Fit/CrystalBall/Significance/: ControlCSVtoHist.py  PlotAllToys.py  PlotToys.py  (+7 more)
python/Fit/Diagnostic/: ROCPlotNew.py
python/Fit/FitOutputs/: BsReconstructor_v1_TreeSize47000_Seed_1.962846901466769e+24_06-11-24_12:26:49_fitted_2024-11-08_17-48-53.root  BsReconstructor_v1_TreeSize47000_Seed_1.962846901466769e+24_06-11-24_12:26:49_fitted_2024-11-09_17-22-16.root  BsReconstructor_v1_TreeSize47000_Seed_2.0458387337840932e+24_07-11-24_13:02:22_fitted_2024-11-08_17-46-24.root  BsReconstructor_v1_TreeSize47000_Seed_2.0458387337840932e+24_07-11-24_13:02:22_fitted_2024-11-09_17-17-26.root  Comparison.py
python/Fit/OldFiles/: Variables50psPrelim.py
python/Inputs/: Test.py
python/Inputs/PEff Kaons_150/: Region 3.csv
python/Inputs/PEff Kaons_300/: Region 1.csv  Region 3.csv
python/Outputs/: File1.root
python/Outputs/ToyPlots/: Models1000Velo50.csv  Models1000Velo50.txt  Models10Velo50.txt
python/Outputs/TrackSelection/: Batch4D.csv  CombineCsvs.py  EuanSignal4D.csv  LambdacComp.csv  LambdacCompIP0.0.csv  LambdacCompIP0.5.csv  LambdacCompIP0.csv  LambdacCompIP1.0.csv  LambdacCompIP1.5.csv  LambdacCompIP1.csv  LambdacCompIP2.0.csv  LambdacCompIP2.5.csv  LambdacCompIP2.csv  LambdacCompIP3.0.csv  LambdacCompIP3.5.csv  LambdacCompIP3.csv  LambdacCompIP4.0.csv  LambdacCompIP4.5.csv  LambdacCompIP4.csv  LambdacCompIP5.0.csv  LambdacCompIP5.5.csv  LambdacCompIP5.csv  LambdacCompIP6.0.csv  LambdacCompIP6.5.csv  LambdacCompIP6.csv  LambdacCompIP7.0.csv  LambdacCompIP7.csv  LambdacCompIPALL.csv  LambdacCompIPAll.csv  ROCPLOTDATA.csv  ROCPlotData4D.csv
python/Outputs/XisToLambdas/: 49589.root  4thTree.csv  50ps.root  ManuallyMade.root  TS_45800_Time_11-02-25_18:24:21_Counters.csv  TS_49655_Time_06-02-25_14:52:51.root  TS_49655_Time_06-02-25_20:52:53.root  TS_49955_NewCuts.root  TS_49955_Time_10-02-25_20:42:55.root  Tree0:2.root  Tree12:14.root  Tree14:16.root  Tree22:24.root  Tree24:26.root  Tree26:28.root  Tree32:34.root  Tree34:36.root  Tree36:38.root  Tree40:42.root  Tree42:44.root  Tree44:46.root  Tree4:6.root  Tree8:10.root  branch_sums.csv
python/PEff Kaons/: Region 1.csv  Region 2.csv  Region 3.csv  Region 4.csv  Region 5.csv
python/PEff Kaons_150/: Region 1.csv  Region 2.csv  Region 3.csv  Region 4.csv  Region 5.csv
python/PEff Kaons_300/: Region 2.csv  Region 4.csv  Region 5.csv
python/lhcbstyle-master/: .gitlab-ci.yml  .pre-commit-config.yaml  README.md  setup.cfg  setup.py
python/lhcbstyle-master/src/lhcbstyle/: __init__.py  __main__.py  lhcbStyle.C  lhcbstyle.py
python/lhcbstyle-master/tests/: test_cli.py  test_pyroot_plot.py
python/t=300/PID1/: BsReconstructor_v1_TreeSize2000_Seed_1.566617118163761e+24_01-11-24_14:13:14.root  BsReconstructor_v1_TreeSize47000_Seed_2.0458387337840932e+24_07-11-24_13:02:22.root
src/: MakeTuple.cpp  TrackState original.cpp  TrackState.cpp  uComposite.cpp  uParticle original.cpp  uParticle.cpp  uVertex original.cpp
utils/: adaptor.cpp
(+2106 files in other folders)
