###############################################################################
# Setuptools
###############################################################################

[metadata]
name = lhcbstyle
description = LHCb style for ROOT plots
long_description_content_type = text/markdown
long_description = file: README.md
url = https://gitlab.cern.ch/lhcb-docs/lhcbstyle
author = Adam Morris
author_email = adam.morris@cern.ch
license = GPL-3.0-only
license_files = file: COPYING
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
python_requires = >=3.7
package_dir=
    =src
packages = find:
install_requires =
zip_safe = True
include_package_data = True

[options.package_data]
* = lhcbStyle.C

[options.packages.find]
where=src

[options.extras_require]
testing =
    pytest
    pytest-cov
    pre-commit

[options.entry_points]
console_scripts =
    lhcbstyle = lhcbstyle.__main__:parse_args

###############################################################################
# Linting
###############################################################################

[flake8]
max-line-length = 120
ignore = E501
# max-complexity = 12
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,
    W503,
select = C,E,F,W,B,B9
exclude =
    .pyre/

[isort]
profile = black
multi_line_output = 3
src_paths =
    src
    tests

[tool:pytest]
addopts = -vvv --cov=lhcbstyle --cov-report=term-missing
